--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -8,12 +8,36 @@ list=[{
 "path": "res://Scripts/Controllers/AnimationManager.gd"
 }, {
 "base": &"Node3D",
+"class": &"Camera3CManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3CX/Camera3CManager.gd"
+}, {
+"base": &"Node3D",
 "class": &"CameraRig",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/Controllers/CameraRig.gd"
+}, {
+"base": &"CharacterBody3D",
+"class": &"Character3CManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3CX/Character3CManager.gd"
+}, {
+"base": &"Resource",
+"class": &"CharacterConfig",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3CX/CharacterConfig.gd"
 }, {
 "base": &"Node",
 "class": &"CharacterDebugHelper",
@@ -46,6 +70,22 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/InputComponents/ClickNavigationComponent.gd"
+}, {
+"base": &"Node",
+"class": &"Control3CManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3CX/Control3CManager.gd"
+}, {
+"base": &"Control",
+"class": &"Debug3CUI",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3CX/Debug3CUI.gd"
 }, {
 "base": &"Node",
 "class": &"GamepadInputComponent",
@@ -134,4 +174,12 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/Character/States/StateWalking.gd"
+}, {
+"base": &"Resource",
+"class": &"TC3Presets",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3CX/3CPresets.gd"
 }]
