--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -55,6 +55,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/Character/CharacterStatesBase.gd"
 }, {
+"base": &"State",
+"class": &"CharacterStateBase3C",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3CX/States3C/CharacterStateBase3C.gd"
+}, {
 "base": &"Node",
 "class": &"CharacterStateMachine",
 "icon": "",
@@ -62,6 +70,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/Character/CharacterStateMachine.gd"
+}, {
+"base": &"Node",
+"class": &"CharacterStateMachine3C",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3CX/CharacterStateMachine3C.gd"
 }, {
 "base": &"Node",
 "class": &"ClickNavigationComponent",
@@ -135,6 +151,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/Character/States/StateAirborne.gd"
 }, {
+"base": &"CharacterStateBase3C",
+"class": &"StateAirborne3C",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3CX/States3C/StateAirborne3C.gd"
+}, {
 "base": &"CharacterStateBase",
 "class": &"StateIdle",
 "icon": "",
@@ -142,6 +166,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/Character/States/StateIdle.gd"
+}, {
+"base": &"CharacterStateBase3C",
+"class": &"StateIdle3C",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3CX/States3C/StateIdle3C.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateJumping",
@@ -151,6 +183,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/Character/States/StateJumping.gd"
 }, {
+"base": &"CharacterStateBase3C",
+"class": &"StateJumping3C",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3CX/States3C/StateJumping3C.gd"
+}, {
 "base": &"CharacterStateBase",
 "class": &"StateLanding",
 "icon": "",
@@ -158,6 +198,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/Character/States/StateLanding.gd"
+}, {
+"base": &"CharacterStateBase3C",
+"class": &"StateLanding3C",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3CX/States3C/StateLanding3C.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateRunning",
@@ -167,6 +215,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/Character/States/StateRunning.gd"
 }, {
+"base": &"CharacterStateBase3C",
+"class": &"StateRunning3C",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3CX/States3C/StateRunning3C.gd"
+}, {
 "base": &"CharacterStateBase",
 "class": &"StateWalking",
 "icon": "",
@@ -174,6 +230,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/Character/States/StateWalking.gd"
+}, {
+"base": &"CharacterStateBase3C",
+"class": &"StateWalking3C",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3CX/States3C/StateWalking3C.gd"
 }, {
 "base": &"Resource",
 "class": &"TC3Presets",
