--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/3CX/Debug3CUI.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://THEORY/", "res://Scripts/", "res://Scripts/InputComponents/", "res://Scripts/Controllers/", "res://Scripts/Components/", "res://Scripts/Character/", "res://Scripts/Character/States/", "res://Scripts/3CX/", "res://Scripts/_Debug/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/3CX/CharacterStateMachine3C.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://THEORY/", "res://Scripts/", "res://Scripts/InputComponents/", "res://Scripts/Controllers/", "res://Scripts/Components/", "res://Scripts/Character/", "res://Scripts/3CX/", "res://Scripts/3CX/States3C/", "res://Scripts/_Debug/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://SCENE.tscn")
-current_scene="res://SCENE.tscn"
+open_scenes=PackedStringArray("res://SCENE_3C.tscn")
+current_scene="res://SCENE_3C.tscn"
 center_split_offset=-369
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -44,8 +44,8 @@ size=Vector2i(3248, 1669)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/3CX/3CPresets.gd", "res://THEORY/3C_AdpatationToFramework.md", "res://Scripts/Controllers/AnimationManager.gd", "res://Scripts/3CX/Camera3CManager.gd", "res://Scripts/Controllers/CameraRig.gd", "res://Scripts/3CX/Character3CManager.gd", "res://Scripts/3CX/CharacterConfig.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/3CX/Control3CManager.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/3CX/Debug3CUI.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/InputManager.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/Character/MovementManager.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd"]
-selected_script="res://Scripts/3CX/Debug3CUI.gd"
+open_scripts=["res://Scripts/3CX/3CPresets.gd", "res://THEORY/3C_AdpatationToFramework.md", "res://Scripts/Controllers/AnimationManager.gd", "res://Scripts/3CX/Camera3CManager.gd", "res://Scripts/Controllers/CameraRig.gd", "res://Scripts/3CX/Character3CManager.gd", "res://Scripts/3CX/CharacterConfig.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/3CX/States3C/CharacterStateBase3C.gd", "res://Scripts/3CX/CharacterStateMachine3C.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/3CX/Control3CManager.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/3CX/Debug3CUI.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/InputComponents/InputManager.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/Character/MovementManager.gd", "res://Scripts/Character/State.gd", "res://Scripts/3CX/States3C/StateAirborne3C.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/3CX/States3C/StateIdle3C.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/3CX/States3C/StateJumping3C.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/3CX/States3C/StateLanding3C.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/3CX/States3C/StateRunning3C.gd", "res://Scripts/3CX/States3C/StateWalking3C.gd"]
+selected_script="res://Scripts/InputComponents/GamepadComponent.gd"
 open_help=[]
 script_split_offset=522
 list_split_offset=0
