--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -13,7 +13,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/3CX/Camera3CManager.gd"
+"path": "res://Scripts/3C/Camera3CManager.gd"
 }, {
 "base": &"Node3D",
 "class": &"CameraRig",
@@ -29,7 +29,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/3CX/Character3CManager.gd"
+"path": "res://Scripts/3C/Character3CManager.gd"
 }, {
 "base": &"Resource",
 "class": &"CharacterConfig",
@@ -37,7 +37,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/3CX/CharacterConfig.gd"
+"path": "res://Scripts/3C/CharacterConfig.gd"
 }, {
 "base": &"Node",
 "class": &"CharacterDebugHelper",
@@ -61,7 +61,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/3CX/States3C/CharacterStateBase3C.gd"
+"path": "res://Scripts/3C/States3C/CharacterStateBase3C.gd"
 }, {
 "base": &"Node",
 "class": &"CharacterStateMachine",
@@ -77,7 +77,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/3CX/CharacterStateMachine3C.gd"
+"path": "res://Scripts/3C/CharacterStateMachine3C.gd"
 }, {
 "base": &"Node",
 "class": &"ClickNavigationComponent",
@@ -93,7 +93,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/3CX/Control3CManager.gd"
+"path": "res://Scripts/3C/Control3CManager.gd"
 }, {
 "base": &"Control",
 "class": &"Debug3CUI",
@@ -101,7 +101,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/3CX/Debug3CUI.gd"
+"path": "res://Scripts/3C/Debug3CUI.gd"
 }, {
 "base": &"Node",
 "class": &"GamepadInputComponent",
@@ -157,7 +157,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/3CX/States3C/StateAirborne3C.gd"
+"path": "res://Scripts/3C/States3C/StateAirborne3C.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateIdle",
@@ -173,7 +173,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/3CX/States3C/StateIdle3C.gd"
+"path": "res://Scripts/3C/States3C/StateIdle3C.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateJumping",
@@ -189,7 +189,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/3CX/States3C/StateJumping3C.gd"
+"path": "res://Scripts/3C/States3C/StateJumping3C.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateLanding",
@@ -205,7 +205,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/3CX/States3C/StateLanding3C.gd"
+"path": "res://Scripts/3C/States3C/StateLanding3C.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateRunning",
@@ -221,7 +221,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/3CX/States3C/StateRunning3C.gd"
+"path": "res://Scripts/3C/States3C/StateRunning3C.gd"
 }, {
 "base": &"CharacterStateBase",
 "class": &"StateWalking",
@@ -237,7 +237,7 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/3CX/States3C/StateWalking3C.gd"
+"path": "res://Scripts/3C/States3C/StateWalking3C.gd"
 }, {
 "base": &"Resource",
 "class": &"TC3Presets",
@@ -245,5 +245,5 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/3CX/3CPresets.gd"
+"path": "res://Scripts/3C/Presets/3CPresets.gd"
 }]
