--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -6,8 +6,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 200,
-"scroll_position": 152.0,
+"row": 49,
+"scroll_position": 36.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,7 +77,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 81,
-"scroll_position": 57.0,
+"scroll_position": 33.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -132,9 +132,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
+"row": 316,
+"scroll_position": 81.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 316,
 "syntax_highlighter": "GDScript"
 }
 
@@ -194,117 +198,15 @@ state={
 "syntax_highlighter": "Markdown"
 }
 
-[res://Scripts/3CX/CharacterConfig.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 74,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 42,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/3CX/3CPresets.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 25,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 262,
-"scroll_position": 230.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/3CX/Debug3CUI.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 3,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 399,
-"scroll_position": 356.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/3CX/Camera3CManager.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 330,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/3CX/Control3CManager.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 287,
-"scroll_position": 238.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/3CX/Character3CManager.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 14,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 150,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 14,
-"selection_from_line": 150,
-"selection_to_column": 16,
-"selection_to_line": 160,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/3CX/States3C/CharacterStateBase3C.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 37,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 95,
-"scroll_position": 46.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://Scripts/Character/States/StateAirborne.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 13,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -318,7 +220,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -329,10 +231,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 20,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -343,11 +245,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 2.0,
+"row": 17,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -360,7 +262,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -371,109 +273,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 3,
 "scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/3CX/States3C/StateWalking3C.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 23,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/3CX/States3C/StateIdle3C.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 21,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/3CX/States3C/StateRunning3C.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 24,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/3CX/States3C/StateJumping3C.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 29,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/3CX/States3C/StateAirborne3C.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 23,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/3CX/States3C/StateLanding3C.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 41,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 18,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/3CX/CharacterStateMachine3C.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 325,
-"scroll_position": 276.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -487,6 +291,210 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/States3C/CharacterStateBase3C.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 68,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 77,
+"scroll_position": 59.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/States3C/StateLanding3C.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 17,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/States3C/StateAirborne3C.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 26,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 16,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/States3C/StateJumping3C.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 6,
+"selection_to_column": 17,
+"selection_to_line": 7,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/States3C/StateRunning3C.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 17,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/States3C/StateIdle3C.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/States3C/StateWalking3C.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 17,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/Camera3CManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 26,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 2,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 11,
+"selection_from_line": 2,
+"selection_to_column": 26,
+"selection_to_line": 2,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/Character3CManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 27,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 430,
+"scroll_position": 390.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/CharacterConfig.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 74,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 42,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/Control3CManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 287,
+"scroll_position": 238.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/Debug3CUI.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 3,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 413,
+"scroll_position": 369.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/CharacterStateMachine3C.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 349,
+"scroll_position": 310.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/Presets/3CPresets.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 25,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 262,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
