--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -128,6 +128,14 @@ list=[{
 "path": "res://Scripts/Components/JumpSystem.gd"
 }, {
 "base": &"Node",
+"class": &"JumpSystem3C",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/JumpSystem3C.gd"
+}, {
+"base": &"Node",
 "class": &"MovementManager",
 "icon": "",
 "is_abstract": false,
@@ -245,5 +253,5 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/3C/Presets/3CPresets.gd"
+"path": "res://Scripts/3C/3CPresets.gd"
 }]
