3C_FRAMEWORK_core componenets 3

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://SCENE.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://THEORY/", "res://Scripts/", "res://Scripts/InputComponents/", "res://Scripts/Controllers/", "res://Scripts/Components/", "res://Scripts/Character/", "res://Scripts/Character/States/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/3C/Animation/AnimationManagerComponent.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://THEORY/", "res://Scripts/", "res://Scripts/InputComponents/", "res://Scripts/Controllers/", "res://Scripts/Components/", "res://Scripts/Character/States/", "res://Scripts/3C/", "res://Scripts/3C/Debug/", "res://Scripts/3C/Core/", "res://Scripts/3C/Control/", "res://Scripts/3C/Config/", "res://Scripts/3C/Character/", "res://Scripts/3C/Camera/", "res://Scripts/3C/Animation/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -30,7 +30,7 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://MARKER.tscn", "res://SCENE.tscn")
 current_scene="res://SCENE.tscn"
-center_split_offset=-639
+center_split_offset=-485
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
@@ -44,10 +44,10 @@ size=Vector2i(3248, 1669)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/3C/3CPresets.gd", "res://THEORY/3C_AdpatationToFramework.md", "res://Scripts/Controllers/AnimationManager.gd", "res://Scripts/3C/Camera3CManager.gd", "res://Scripts/Controllers/CameraRig.gd", "res://Scripts/3C/Character3CManager.gd", "res://Scripts/3C/CharacterConfig.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/3C/States3C/CharacterStateBase3C.gd", "res://Scripts/3C/CharacterStateMachine3C.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/3C/Control3CManager.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/3C/Debug3CUI.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/InputComponents/InputManager.gd", "res://Scripts/3C/JumpSystem3C.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/Character/MovementManager.gd", "res://Scripts/Character/State.gd", "res://Scripts/3C/States3C/StateAirborne3C.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/3C/States3C/StateIdle3C.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/3C/States3C/StateJumping3C.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/3C/States3C/StateLanding3C.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/3C/States3C/StateRunning3C.gd", "res://Scripts/Character/States/StateRunning.gd", "res://Scripts/3C/States3C/StateWalking3C.gd", "res://Scripts/Character/States/StateWalking.gd"]
-selected_script="res://Scripts/3C/Character3CManager.gd"
+open_scripts=["res://Scripts/3C/Config/3CConfigComponent.gd", "res://Scripts/3C/Debug/3CDebugUI.gd", "res://Scripts/3C/Config/3CPresets.gd", "res://THEORY/3C_AdpatationToFramework.md", "res://Scripts/Controllers/AnimationManager.gd", "res://Scripts/3C/Animation/AnimationManagerComponent.gd", "res://Scripts/3C/Character/AvatarComponent.gd", "res://Scripts/3C/Core/CameraCore.gd", "res://Scripts/3C/Camera/CameraDistanceComponent.gd", "res://Scripts/3C/Camera/CameraFollowComponent.gd", "res://Scripts/Controllers/CameraRig.gd", "res://Scripts/3C/Config/CharacterConfig.gd", "res://Scripts/3C/Core/CharacterCore.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/3C/Control/DirectControlComponent.gd", "res://Scripts/3C/Character/DirectMovementComponent.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/InputComponents/InputManager.gd", "res://Scripts/3C/Control/InputManagerComponent.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/3C/Control/KeyboardMouseComponent.gd", "res://Scripts/Character/MovementManager.gd", "res://Scripts/3C/Camera/OrbitalCameraComponent.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/Character/States/StateRunning.gd", "res://Scripts/Character/States/StateWalking.gd", "res://Scripts/3C/Control/TargetControlComponent.gd", "res://Scripts/3C/Character/TargetMovementComponent.gd"]
+selected_script="res://Scripts/3C/Animation/AnimationManagerComponent.gd"
 open_help=[]
-script_split_offset=522
+script_split_offset=526
 list_split_offset=0
 zoom_factor=nan
 
