--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -7,6 +7,46 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/Controllers/AnimationManager.gd"
 }, {
+"base": &"Node",
+"class": &"AnimationManagerComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Animation/AnimationManagerComponent.gd"
+}, {
+"base": &"Node",
+"class": &"AvatarComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Character/AvatarComponent.gd"
+}, {
+"base": &"Camera3D",
+"class": &"CameraCore",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Core/CameraCore.gd"
+}, {
+"base": &"Node",
+"class": &"CameraDistanceComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Camera/CameraDistanceComponent.gd"
+}, {
+"base": &"Node",
+"class": &"CameraFollowComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Camera/CameraFollowComponent.gd"
+}, {
 "base": &"Node3D",
 "class": &"CameraRig",
 "icon": "",
@@ -14,6 +54,22 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/Controllers/CameraRig.gd"
+}, {
+"base": &"Resource",
+"class": &"CharacterConfig",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Config/CharacterConfig.gd"
+}, {
+"base": &"CharacterBody3D",
+"class": &"CharacterCore",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Core/CharacterCore.gd"
 }, {
 "base": &"Node",
 "class": &"CharacterDebugHelper",
@@ -48,6 +104,22 @@ list=[{
 "path": "res://Scripts/InputComponents/ClickNavigationComponent.gd"
 }, {
 "base": &"Node",
+"class": &"DirectControlComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Control/DirectControlComponent.gd"
+}, {
+"base": &"Node",
+"class": &"DirectMovementComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Character/DirectMovementComponent.gd"
+}, {
+"base": &"Node",
 "class": &"GamepadInputComponent",
 "icon": "",
 "is_abstract": false,
@@ -64,6 +136,14 @@ list=[{
 "path": "res://Scripts/InputComponents/InputManager.gd"
 }, {
 "base": &"Node",
+"class": &"InputManagerComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Control/InputManagerComponent.gd"
+}, {
+"base": &"Node",
 "class": &"JumpSystem",
 "icon": "",
 "is_abstract": false,
@@ -72,12 +152,28 @@ list=[{
 "path": "res://Scripts/Components/JumpSystem.gd"
 }, {
 "base": &"Node",
+"class": &"KeyboardMouseComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Control/KeyboardMouseComponent.gd"
+}, {
+"base": &"Node",
 "class": &"MovementManager",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/Character/MovementManager.gd"
+}, {
+"base": &"Node",
+"class": &"OrbitalCameraComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Camera/OrbitalCameraComponent.gd"
 }, {
 "base": &"Node",
 "class": &"State",
@@ -134,4 +230,44 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/Character/States/StateWalking.gd"
+}, {
+"base": &"Node",
+"class": &"TargetControlComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Control/TargetControlComponent.gd"
+}, {
+"base": &"Node",
+"class": &"TargetMovementComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Character/TargetMovementComponent.gd"
+}, {
+"base": &"Node",
+"class": &"ThreeCConfigComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Config/3CConfigComponent.gd"
+}, {
+"base": &"Control",
+"class": &"ThreeCDebugUI",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Debug/3CDebugUI.gd"
+}, {
+"base": &"RefCounted",
+"class": &"ThreeCPresets",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/Config/3CPresets.gd"
 }]
