--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -247,6 +247,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/3C/Character/TargetMovementComponent.gd"
 }, {
+"base": &"CharacterBody3D",
+"class": &"ThreeCCharacterController",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/3C/3CCharacterController.gd.gd"
+}, {
 "base": &"Node",
 "class": &"ThreeCConfigComponent",
 "icon": "",
