--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/3C/Animation/AnimationManagerComponent.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://THEORY/", "res://Scripts/", "res://Scripts/InputComponents/", "res://Scripts/Controllers/", "res://Scripts/Components/", "res://Scripts/Character/States/", "res://Scripts/3C/", "res://Scripts/3C/Debug/", "res://Scripts/3C/Core/", "res://Scripts/3C/Control/", "res://Scripts/3C/Config/", "res://Scripts/3C/Character/", "res://Scripts/3C/Camera/", "res://Scripts/3C/Animation/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/3C/3CCharacterController.gd.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://THEORY/", "res://Scripts/", "res://Scripts/Character/States/", "res://Scripts/3C/", "res://Scripts/3C/Debug/", "res://Scripts/3C/Core/", "res://Scripts/3C/Control/", "res://Scripts/3C/Config/", "res://Scripts/3C/Character/", "res://Scripts/3C/Camera/", "res://Scripts/3C/Animation/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://MARKER.tscn", "res://SCENE.tscn")
-current_scene="res://SCENE.tscn"
+open_scenes=PackedStringArray("res://SCENE_3C.tscn", "res://Assets/ps_character_gurl.tscn")
+current_scene="res://SCENE_3C.tscn"
 center_split_offset=-485
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=4
 
 [EditorWindow]
 
@@ -44,8 +44,8 @@ size=Vector2i(3248, 1669)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/3C/Config/3CConfigComponent.gd", "res://Scripts/3C/Debug/3CDebugUI.gd", "res://Scripts/3C/Config/3CPresets.gd", "res://THEORY/3C_AdpatationToFramework.md", "res://Scripts/Controllers/AnimationManager.gd", "res://Scripts/3C/Animation/AnimationManagerComponent.gd", "res://Scripts/3C/Character/AvatarComponent.gd", "res://Scripts/3C/Core/CameraCore.gd", "res://Scripts/3C/Camera/CameraDistanceComponent.gd", "res://Scripts/3C/Camera/CameraFollowComponent.gd", "res://Scripts/Controllers/CameraRig.gd", "res://Scripts/3C/Config/CharacterConfig.gd", "res://Scripts/3C/Core/CharacterCore.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/3C/Control/DirectControlComponent.gd", "res://Scripts/3C/Character/DirectMovementComponent.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/InputComponents/InputManager.gd", "res://Scripts/3C/Control/InputManagerComponent.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/3C/Control/KeyboardMouseComponent.gd", "res://Scripts/Character/MovementManager.gd", "res://Scripts/3C/Camera/OrbitalCameraComponent.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/Character/States/StateRunning.gd", "res://Scripts/Character/States/StateWalking.gd", "res://Scripts/3C/Control/TargetControlComponent.gd", "res://Scripts/3C/Character/TargetMovementComponent.gd"]
-selected_script="res://Scripts/3C/Animation/AnimationManagerComponent.gd"
+open_scripts=["res://Scripts/3C/3CCharacterController.gd.gd", "res://Scripts/3C/Config/3CConfigComponent.gd", "res://Scripts/3C/Debug/3CDebugUI.gd", "res://Scripts/3C/Config/3CPresets.gd", "res://THEORY/3C_AdpatationToFramework.md", "res://Scripts/Controllers/AnimationManager.gd", "res://Scripts/3C/Animation/AnimationManagerComponent.gd", "res://Scripts/3C/Character/AvatarComponent.gd", "res://Scripts/3C/Core/CameraCore.gd", "res://Scripts/3C/Camera/CameraDistanceComponent.gd", "res://Scripts/3C/Camera/CameraFollowComponent.gd", "res://Scripts/Controllers/CameraRig.gd", "res://Scripts/3C/Config/CharacterConfig.gd", "res://Scripts/3C/Core/CharacterCore.gd", "res://Scripts/_Debug/CharacterDebugHelper.gd", "res://Scripts/Character/CharacterStateMachine.gd", "res://Scripts/Character/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/3C/Control/DirectControlComponent.gd", "res://Scripts/3C/Character/DirectMovementComponent.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/InputComponents/InputManager.gd", "res://Scripts/3C/Control/InputManagerComponent.gd", "res://Scripts/Components/JumpSystem.gd", "res://Scripts/3C/Control/KeyboardMouseComponent.gd", "res://Scripts/Character/MovementManager.gd", "res://Scripts/3C/Camera/OrbitalCameraComponent.gd", "res://Scripts/Character/State.gd", "res://Scripts/Character/States/StateAirborne.gd", "res://Scripts/Character/States/StateIdle.gd", "res://Scripts/Character/States/StateJumping.gd", "res://Scripts/Character/States/StateLanding.gd", "res://Scripts/Character/States/StateRunning.gd", "res://Scripts/Character/States/StateWalking.gd", "res://Scripts/3C/Control/TargetControlComponent.gd", "res://Scripts/3C/Character/TargetMovementComponent.gd"]
+selected_script="res://Scripts/3C/3CCharacterController.gd.gd"
 open_help=[]
 script_split_offset=526
 list_split_offset=0
