--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -366,20 +366,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/3C/Debug/3CDebugUI.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 25,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 72,
-"scroll_position": 45.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://Scripts/3C/Core/CharacterCore.gd]
 
 state={
@@ -478,34 +464,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/3C/Config/3CPresets.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/3C/Config/3CConfigComponent.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://Scripts/3C/Character/TargetMovementComponent.gd]
 
 state={
@@ -534,16 +492,70 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/3C/3CCharacterController.gd.gd]
+[res://Scripts/3C/Config/ThreeCConfigComponent.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 48,
-"scroll_position": 5.0,
+"row": 2,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 11,
+"selection_from_line": 2,
+"selection_to_column": 32,
+"selection_to_line": 2,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/Config/ThreeCPresets.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 49,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/ThreeCCharacterController.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 36,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 2,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 11,
+"selection_from_line": 2,
+"selection_to_column": 36,
+"selection_to_line": 2,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/3C/Debug/ThreeCDebugUI.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 24,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 2,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 10,
+"selection_from_line": 2,
+"selection_to_column": 24,
+"selection_to_line": 2,
 "syntax_highlighter": "GDScript"
 }
