--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -323,16 +323,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 10,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 11,
-"selection_from_line": 2,
-"selection_to_column": 37,
-"selection_to_line": 2,
+"selection_from_column": 0,
+"selection_from_line": 10,
+"selection_to_column": 55,
+"selection_to_line": 12,
 "syntax_highlighter": "GDScript"
 }
 
@@ -369,16 +369,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 43,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1,
+"row": 46,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 1,
-"selection_to_column": 28,
-"selection_to_line": 2,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -545,10 +541,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
